--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "4.1",
-    "mongoose": "^9.1.1"
+    "mongoose": "^9.1.1",
+    "uuid": "^13.0.0"
   }
 }
